# flutter-rust-template

./: .gitignore  .justfile  Cargo.toml  README.md  pubspec.yaml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/farmcare/: MainActivity.kt
crates/client/: Cargo.toml
crates/client/examples/: healthz.rs
crates/client/src/: error.rs  lib.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  handler.rs  lib.rs  main.rs
crates/server/src/api/: healthz.rs  mod.rs
crates/shared/: Cargo.toml
crates/shared/examples/: gen_certs.rs
crates/shared/src/: lib.rs  logging.rs  shutdown.rs
crates/shared/src/testing/: mod.rs  tls.rs
integration_test/: healthz_test.dart  simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  config.dart  main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: healthz.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: healthz.rs  mod.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: rust_lib_farmcare.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_farmcare.podspec
rust_builder/windows/: CMakeLists.txt
test/: healthz_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
