[workspace]
resolver = "3"
members = ["crates/client", "crates/server", "crates/shared", "rust"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-compat = "0.2.5"
base64 = "0.22.1"
async-signal = "0.2.13"
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
futures = "0.3.31"
futures-rustls = { version = "0.26.0", default-features = false, features = [
  "ring",
] }
http-body-util = "0.1.3"
hyper = "1.8.1"
hyper-util = { version = "0.1.18", features = ["client", "http2"] }
pem = "3.0.4"
quinn = { version = "0.11.9", default-features = false, features = [
  "runtime-smol",
  "rustls-ring",
] }
rcgen = "0.14.5"
rustls = { version = "0.23.35", default-features = false, features = [
  "ring",
  "std",
  "tls12",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
smol = "2.0.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", default-features = false, features = ["io-util"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }

client = { path = "./crates/client" }
server = { path = "./crates/server" }
shared = { path = "./crates/shared" }
