[package]
name = "client"
version.workspace = true
edition.workspace = true

[dependencies]
async-compat.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
futures-rustls.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
pem.workspace = true
quinn.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
shared.workspace = true
smol.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

server.workspace = true
